reduce projectGridMember shadow clipping in lightMode and add darkMode shadows, reduce size of Work section bgCircleEffects and increase sensitivity to viewport exit to prevent visible clipped edges

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,7 @@ html::-webkit-scrollbar {
 }
 
 .projectGridMember {
-	@apply relative col-span-3 h-full w-full overflow-hidden rounded-[2rem] shadow-lg xl:shadow-xl;
+	@apply relative col-span-3 h-full w-full overflow-hidden rounded-lg shadow-gridMemberLight dark:shadow-gridMemberDark;
 }
 
 .experienceListMember {
